schema/testdata/validation_relationships_attr_empty/schema.keel
model Post {
    fields {
        author1 Text @relation
        author2 Author @relation
    }
}

model Author {
}
